--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,13 +7,12 @@ jobs:
     runs-on: ubuntu-latest
     env:
         # REPLACE THIS
-        DOCKERHUB_USERNAME: corndeldevopscourse
+        DOCKERHUB_USERNAME: luket511
         # SET THESE IN GITHUB
         DOCKERHUB_TOKEN: '${{ secrets.DOCKERHUB_TOKEN }}'
         AZURE_WEBHOOK: '${{ secrets.AZURE_WEBHOOK }}'
     # DECIDE WHETHER YOU WANT A BRANCH CHECK - if so remove the other "if"
-    # if: github.ref == 'refs/heads/master'
-    if: github.repository != 'corndeladmin/DevOps-Course-Workshop-Module-13-Learners'
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: test
         run: echo ${{ github.repository }}
